made field cache optional

--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -6,6 +6,9 @@ solandra.compression = false
 #The consistency level of solandra reads and writes
 solandra.consistency = ONE
 
+#use custom field cache implementation for solandra
+solandra.custom.fieldcache = false
+
 #The number of milliseconds solandra will wait before
 #checking to see if it's cache needs to be invalidated
 #for a given index
