--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -1,6 +1,7 @@
 
 #Set to true if you want solandra to compress fields + meta data
 #This will size on disk at the cost of indexing speed
+#Compression is google snappy
 solandra.compression = false
 
 #The consistency level of solandra reads and writes
