--- a/resources/cassandra/log4j-tools.properties
+++ b/resources/cassandra/log4j-tools.properties
@@ -18,7 +18,7 @@
 # and the pattern to %c instead of %l.  (%l is slower.)
 
 # output messages into a rolling log file as well as stdout
-log4j.rootLogger=WARN,stderr
+log4j.rootLogger=INFO,stderr
 
 # stderr
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
