--- a/resources/cassandra.yaml
+++ b/resources/cassandra.yaml
@@ -65,7 +65,7 @@ authority: org.apache.cassandra.auth.AllowAllAuthority
 #
 # See http://wiki.apache.org/cassandra/Operations for more on
 # partitioners and token selection.
-partitioner: org.apache.cassandra.dht.RandomPartitioner
+partitioner: lucandra.dht.RandomPartitioner
 
 # directories where Cassandra should store data on disk.
 data_file_directories:
