--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -2,10 +2,10 @@
 #Set to true if you want solandra to compress fields + meta data
 #This will size on disk at the cost of indexing speed
 #Compression is google snappy
-solandra.compression = false
+solandra.compression = true
 
 #The consistency level of solandra reads and writes
-solandra.consistency = ONE
+solandra.consistency = QUORUM
 
 #The number of milliseconds solandra will wait before
 #checking to see if it's cache needs to be invalidated
@@ -19,7 +19,7 @@ solandra.cache.invalidation.check.interval = 1000
 #
 #*NOTE* This value should not be changed once documents are indexed
 #*NOTE* This value must be a power of 2
-solandra.maximum.docs.per.shard = 131072
+solandra.maximum.docs.per.shard = 1048576
 
 #The number of index ids to reserve at a time
 #*NOTE* this value must be a power of 2
