Issue #73: move solandra.port configuration into solandra.properties

--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -37,6 +37,10 @@ solandra.write.buffer.queue.size = 16
 #keyspace name for solandra
 solandra.keyspace = L
 
+#The port number that the Solandra server uses to listen for client requests.
+#If unspecified, then the default is 8983.
+solandra.port = 8983
+
 #The number of retries solandra will attempt before 
 #failing a write or read (TimeoutException)
 cassandra.retries = 1024
