--- a/resources/solandra.properties
+++ b/resources/solandra.properties
@@ -41,6 +41,10 @@ solandra.keyspace = L
 #If unspecified, then the default is 8983.
 solandra.port = 8983
 
+#The network interface that the Solandra server uses to listen for client requests.
+#If unspecified, then the default is 0.0.0.0
+solandra.host = 0.0.0.0
+
 #The number of retries solandra will attempt before 
 #failing a write or read (TimeoutException)
 cassandra.retries = 1024
