--- a/ivy.xml
+++ b/ivy.xml
@@ -38,9 +38,8 @@
     <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.26" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.14" conf="* -> *,!sources,!javadoc" />
 
-    <dependency org="org.apache.cassandra" name="cassandra-all" rev="0.8.6" conf="* -> *,!sources,!javadoc" />
+    <dependency org="org.apache.cassandra" name="cassandra-all" rev="1.1.0-beta2" conf="* -> *,!sources,!javadoc" />
     <dependency org="net.java.dev.jna" name="jna" rev="3.2.7" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.xerial.snappy" name="snappy-java" rev="1.0.3.1" conf="* -> *,!sources,!javadoc" />
   </dependencies>
 </ivy-module>
-
