--- a/ivy.xml
+++ b/ivy.xml
@@ -23,23 +23,19 @@
     <dependency org="junit" name="junit" rev="4.10" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.slf4j" name="slf4j-api" rev="1.6.4" conf="* -> *,!sources,!javadoc"/>
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.4" conf="* -> *,!sources,!javadoc"/>
-    <dependency org="org.antlr" name="antlr" rev="3.4" conf="* -> *,!sources,!javadoc" />
-    <dependency org="commons-cli" name="commons-cli" rev="1.2" conf="* -> *,!sources,!javadoc"/>
-    <dependency org="commons-lang" name="commons-lang" rev="2.6" conf="* -> *,!sources,!javadoc"/>
     <dependency org="commons-collections" name="commons-collections" rev="3.2.1" conf="* -> *,!sources,!javadoc"/>
     <dependency org="org.apache.solr" name="solr-core" rev="3.4.0" conf="* -> *,!javadoc">
       <exclude org="org.mortbay.jetty"/>  
       <exclude org="org.slf4j"/>
     </dependency>
-
-    <dependency org="org.apache.lucene" name="lucene-core" rev="3.4.0" conf="* -> *,!javadoc"/>
-
     <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.26" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.26" conf="* -> *,!sources,!javadoc" />
     <dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.14" conf="* -> *,!sources,!javadoc" />
 
     <dependency org="org.apache.cassandra" name="cassandra-all" rev="1.1.0-beta2" conf="* -> *,!sources,!javadoc" />
-    <dependency org="net.java.dev.jna" name="jna" rev="3.4.0" conf="* -> *,!sources,!javadoc" />
-    <dependency org="org.xerial.snappy" name="snappy-java" rev="1.0.4.1" conf="* -> *,!sources,!javadoc" />
+
+    <!-- TODO: Added only because missing from the Cassandra pom.  Can be deleted here when by Cassandra. -->
+    <dependency org="com.yammer.metrics" name="metrics-core" rev="2.0.3" conf="* -> *,!sources,!javadoc"/>
+    <dependency org="edu.stanford.ppl" name="snaptree" rev="0.1" conf="* -> *,!sources,!javadoc"/>
   </dependencies>
 </ivy-module>
